--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "4.6.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.3",
@@ -17,8 +19,7 @@
     "react-toastify": "7.0.3",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.9",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.2"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
